feat: 4th task of 2nd la10 exercise

--- a/courses/aud/aud.tex
+++ b/courses/aud/aud.tex
@@ -140,4 +140,6 @@ beschrieben.
 Schließlich bezeichnet eine \emph{formale Sprache $L$ über $\Sigma$} die Menge
 von Wörtern über $\Sigma$, dass heißt $L \in P(\Sigma^*)$.
 
+\paragraph{Syntaxdiagramme}
+
 \end{document}
