--- a/courses/an10/homework/ha03.tex
+++ b/courses/an10/homework/ha03.tex
@@ -107,7 +107,7 @@ Zeigen Sie:
 
   \item $\forall \overline{a}, \overline{b}, \overline{c} \in \overline{\mathbb{Z}} \colon
     \overline{a} \leq \overline{b} \land \overline{b} \leq \overline{c}
-    \Rightarrow \overline{a} \leq \overline{b}$
+    \Rightarrow \overline{a} \leq \overline{c}$
   \end{enumerate}
 
   \newpage
